--- a/conf/deployment/baremetal/upi_1az_rhcos_nvme_intel_3m_3w.yaml
+++ b/conf/deployment/baremetal/upi_1az_rhcos_nvme_intel_3m_3w.yaml
@@ -3,10 +3,10 @@ DEPLOYMENT:
   allow_lower_instance_requirements: false
   local_storage: true
 ENV_DATA:
-  platform: 'baremetal'
-  deployment_type: 'upi'
+  platform: 'rhv'
+  deployment_type: 'ipi'
   worker_replicas: 3
   master_replicas: 3
   mon_type: 'hostpath'
-  osd_type: 'nvme'
-  disk_pattern: 'nvme-INTEL'
+  osd_type: 'hdd'
+  disk_pattern: 'scsi'
